lib/dbml.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/
"use strict";
class peg$SyntaxError extends SyntaxError {
    constructor(message, expected, found, location) {
        super(message);
        this.expected = expected;
        this.found = found;
        this.location = location;
        this.name = "SyntaxError";
    }
    format(sources) {
        let str = "Error: " + this.message;
        if (this.location) {
            let src = null;
            const st = sources.find(s => s.source === this.location.source);
            if (st) {
                src = st.text.split(/\r\n|\n|\r/g);
            }
            const s = this.location.start;
            const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
                ? this.location.source.offset(s)
                : s;
            const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
            if (src) {
                const e = this.location.end;
                const filler = "".padEnd(offset_s.line.toString().length, " ");
                const line = src[s.line - 1];
                const last = s.line === e.line ? e.column : line.length + 1;
                const hatLen = (last - s.column) || 1;
                str += "\n --> " + loc + "\n"
                    + filler + " |\n"
                    + offset_s.line + " | " + line + "\n"
                    + filler + " | " + "".padEnd(s.column - 1, " ")
                    + "".padEnd(hatLen, "^");
            }
            else {
                str += "\n at " + loc;
            }
        }
        return str;
    }
    static buildMessage(expected, found) {
        function hex(ch) {
            return ch.codePointAt(0).toString(16).toUpperCase();
        }
        const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
            ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
            : null;
        function unicodeEscape(s) {
            if (nonPrintable) {
                return s.replace(nonPrintable, ch => "\\u{" + hex(ch) + "}");
            }
            return s;
        }
        function literalEscape(s) {
            return unicodeEscape(s
                .replace(/\\/g, "\\\\")
                .replace(/"/g, "\\\"")
                .replace(/\0/g, "\\0")
                .replace(/\t/g, "\\t")
                .replace(/\n/g, "\\n")
                .replace(/\r/g, "\\r")
                .replace(/[\x00-\x0F]/g, ch => "\\x0" + hex(ch))
                .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x" + hex(ch)));
        }
        function classEscape(s) {
            return unicodeEscape(s
                .replace(/\\/g, "\\\\")
                .replace(/\]/g, "\\]")
                .replace(/\^/g, "\\^")
                .replace(/-/g, "\\-")
                .replace(/\0/g, "\\0")
                .replace(/\t/g, "\\t")
                .replace(/\n/g, "\\n")
                .replace(/\r/g, "\\r")
                .replace(/[\x00-\x0F]/g, ch => "\\x0" + hex(ch))
                .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x" + hex(ch)));
        }
        const DESCRIBE_EXPECTATION_FNS = {
            literal(expectation) {
                return "\"" + literalEscape(expectation.text) + "\"";
            },
            class(expectation) {
                const escapedParts = expectation.parts.map(part => (Array.isArray(part)
                    ? classEscape(part[0]) + "-" + classEscape(part[1])
                    : classEscape(part)));
                return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
            },
            any() {
                return "any character";
            },
            end() {
                return "end of input";
            },
            other(expectation) {
                return expectation.description;
            },
        };
        function describeExpectation(expectation) {
            return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
        }
        function describeExpected(expected) {
            const descriptions = expected.map(describeExpectation);
            descriptions.sort();
            if (descriptions.length > 0) {
                let j = 1;
                for (let i = 1; i < descriptions.length; i++) {
                    if (descriptions[i - 1] !== descriptions[i]) {
                        descriptions[j] = descriptions[i];
                        j++;
                    }
                }
                descriptions.length = j;
            }
            switch (descriptions.length) {
                case 1:
                    return descriptions[0];
                case 2:
                    return descriptions[0] + " or " + descriptions[1];
                default:
                    return descriptions.slice(0, -1).join(", ")
                        + ", or "
                        + descriptions[descriptions.length - 1];
            }
        }
        function describeFound(found) {
            return found ? "\"" + literalEscape(found) + "\"" : "end of input";
        }
        return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
    }
}
function peg$parse(input, options) {
    options = options !== undefined ? options : {};
    const peg$FAILED = {};
    const peg$source = options.grammarSource;
    const peg$startRuleFunctions = {
        File: peg$parseFile,
    };
    let peg$startRuleFunction = peg$parseFile;
    const peg$c0 = "project";
    const peg$c1 = "{";
    const peg$c2 = "}";
    const peg$c3 = "note";
    const peg$c4 = ":";
    const peg$c5 = "table";
    const peg$c6 = "as";
    const peg$c7 = "[";
    const peg$c8 = "]";
    const peg$c9 = ".";
    const peg$c10 = "(";
    const peg$c11 = ",";
    const peg$c12 = ")";
    const peg$c13 = "indexes";
    const peg$c14 = "checks";
    const peg$c15 = "records";
    const peg$c16 = "true";
    const peg$c17 = "false";
    const peg$c18 = "null";
    const peg$c19 = "`";
    const peg$c20 = "tablegroup";
    const peg$c21 = "ref";
    const peg$c22 = "-";
    const peg$c23 = "<>";
    const peg$c24 = "dep";
    const peg$c25 = "->";
    const peg$c26 = "<-";
    const peg$c27 = "//";
    const peg$c28 = "enum";
    const peg$c29 = "\"";
    const peg$c30 = "'''";
    const peg$c31 = "'";
    const peg$c32 = "\\'";
    const peg$c33 = "\\\"";
    const peg$c34 = "/*";
    const peg$c35 = "*/";
    const peg$c36 = "\n";
    const peg$c37 = "\r";
    const peg$r0 = /^[a-zA-Z0-9_,]/;
    const peg$r1 = /^[+\-]/;
    const peg$r2 = /^[0-9]/;
    const peg$r3 = /^[eE]/;
    const peg$r4 = /^[^`]/;
    const peg$r5 = /^[<>]/;
    const peg$r6 = /^[^\n\r]/;
    const peg$r7 = /^[a-zA-Z0-9_]/;
    const peg$r8 = /^[^"\n\r]/;
    const peg$r9 = /^[^'\\]/;
    const peg$r10 = /^[\\]/;
    const peg$r11 = /^[^"\\]/;
    const peg$r12 = /^[^,\]:]/;
    const peg$r13 = /^[^)]/;
    const peg$r14 = /^[^,\]]/;
    const peg$r15 = /^[ \t]/;
    const peg$r16 = /^[ \t\n\r]/;
    const peg$e0 = peg$literalExpectation("Project", true);
    const peg$e1 = peg$literalExpectation("{", false);
    const peg$e2 = peg$literalExpectation("}", false);
    const peg$e3 = peg$literalExpectation("Note", true);
    const peg$e4 = peg$literalExpectation(":", false);
    const peg$e5 = peg$literalExpectation("Table", true);
    const peg$e6 = peg$literalExpectation("as", false);
    const peg$e7 = peg$literalExpectation("[", false);
    const peg$e8 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", ","], false, false, false);
    const peg$e9 = peg$literalExpectation("]", false);
    const peg$e10 = peg$literalExpectation(".", false);
    const peg$e11 = peg$literalExpectation("(", false);
    const peg$e12 = peg$literalExpectation(",", false);
    const peg$e13 = peg$literalExpectation(")", false);
    const peg$e14 = peg$literalExpectation("Indexes", true);
    const peg$e15 = peg$literalExpectation("Checks", true);
    const peg$e16 = peg$literalExpectation("Records", true);
    const peg$e17 = peg$classExpectation(["+", "-"], false, false, false);
    const peg$e18 = peg$classExpectation([["0", "9"]], false, false, false);
    const peg$e19 = peg$classExpectation(["e", "E"], false, false, false);
    const peg$e20 = peg$literalExpectation("true", true);
    const peg$e21 = peg$literalExpectation("false", true);
    const peg$e22 = peg$literalExpectation("null", true);
    const peg$e23 = peg$literalExpectation("`", false);
    const peg$e24 = peg$classExpectation(["`"], true, false, false);
    const peg$e25 = peg$literalExpectation("TableGroup", true);
    const peg$e26 = peg$literalExpectation("Ref", true);
    const peg$e27 = peg$literalExpectation("-", false);
    const peg$e28 = peg$literalExpectation("<>", false);
    const peg$e29 = peg$classExpectation(["<", ">"], false, false, false);
    const peg$e30 = peg$literalExpectation("Dep", true);
    const peg$e31 = peg$literalExpectation("->", false);
    const peg$e32 = peg$literalExpectation("<-", false);
    const peg$e33 = peg$literalExpectation("//", false);
    const peg$e34 = peg$classExpectation(["\n", "\r"], true, false, false);
    const peg$e35 = peg$literalExpectation("Enum", true);
    const peg$e36 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false, false);
    const peg$e37 = peg$literalExpectation("\"", false);
    const peg$e38 = peg$classExpectation(["\"", "\n", "\r"], true, false, false);
    const peg$e39 = peg$literalExpectation("'''", false);
    const peg$e40 = peg$anyExpectation();
    const peg$e41 = peg$literalExpectation("'", false);
    const peg$e42 = peg$classExpectation(["'", "\\"], true, false, false);
    const peg$e43 = peg$literalExpectation("\\'", false);
    const peg$e44 = peg$classExpectation(["\\"], false, false, false);
    const peg$e45 = peg$classExpectation(["\"", "\\"], true, false, false);
    const peg$e46 = peg$literalExpectation("\\\"", false);
    const peg$e47 = peg$literalExpectation("/*", false);
    const peg$e48 = peg$literalExpectation("*/", false);
    const peg$e49 = peg$classExpectation([",", "]", ":"], true, false, false);
    const peg$e50 = peg$classExpectation([")"], true, false, false);
    const peg$e51 = peg$classExpectation([",", "]"], true, false, false);
    const peg$e52 = peg$classExpectation([" ", "\t"], false, false, false);
    const peg$e53 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);
    const peg$e54 = peg$literalExpectation("\n", false);
    const peg$e55 = peg$literalExpectation("\r", false);
    function peg$f0(all) { return all.filter(e => e).flat(); }
    function peg$f1() { }
    function peg$f2(declaration) { return declaration; }
    function peg$f3(name, options) { return { type: "project", name, options }; }
    function peg$f4(name, note) { return { type: "note", name, note }; }
    function peg$f5(note) { return note; }
    function peg$f6(note) { return note; }
    function peg$f7(name, alias, settings, items) { return { type: "table", ...name, alias, items, settings }; }
    function peg$f8(alias) { return alias; }
    function peg$f9(head, item) { return item; }
    function peg$f10(head, tail) { return [head, ...tail]; }
    function peg$f11(option) { return { type: "option", option }; }
    function peg$f12(name, data, settings) { return { type: "column", name, data, settings }; }
    function peg$f13(base, arg) { return `[${arg}]`; }
    function peg$f14(base, array) { return base + array.join(""); }
    function peg$f15(schema, simple) { return schema + "." + simple; }
    function peg$f16(outer, head, entry) { return entry; }
    function peg$f17(outer, head, tail) { return [head, ...tail]; }
    function peg$f18(outer, args) { return `${outer}(${args.join(",")})`; }
    function peg$f19(indices) { return { type: "indices", indices }; }
    function peg$f20(head, index) { return index; }
    function peg$f21(head, tail) { return [head, ...tail]; }
    function peg$f22(name) { return [name]; }
    function peg$f23(name) { return [name]; }
    function peg$f24(columns, settings) { return { columns, settings }; }
    function peg$f25(head, entry) { return entry; }
    function peg$f26(head, tail) { return [head, ...tail]; }
    function peg$f27(entries) { return entries; }
    function peg$f28(checks) { return { type: "checks", checks }; }
    function peg$f29(head, check) { return check; }
    function peg$f30(head, tail) { return [head, ...tail]; }
    function peg$f31(expression, settings) { return { expression, settings }; }
    function peg$f32(name, columns, rows) { return { type: "records", ...name, columns, rows }; }
    function peg$f33(columns, rows) { return { type: "records", columns, rows }; }
    function peg$f34(head, name) { return name; }
    function peg$f35(head, tail) { return [head, ...tail]; }
    function peg$f36(columns) { return columns || []; }
    function peg$f37(head, row) { return row; }
    function peg$f38(head, tail) { return [head, ...tail]; }
    function peg$f39(rows) { return rows || []; }
    function peg$f40(head, tail) { return [head, ...tail]; }
    function peg$f41(tail) { return [{ kind: "null", value: null }, ...tail]; }
    function peg$f42(value) { return value ?? { kind: "null", value: null }; }
    function peg$f43(value) { return { kind: "string", value }; }
    function peg$f44(value) { return { kind: "expression", value }; }
    function peg$f45(value) { return { kind: "number", value }; }
    function peg$f46(value) { return { kind: "boolean", value }; }
    function peg$f47(value) { return { kind: "identifier", value }; }
    function peg$f48(value) { return value; }
    function peg$f49() { return true; }
    function peg$f50() { return false; }
    function peg$f51(value) { return value; }
    function peg$f52() { return { kind: "null", value: null }; }
    function peg$f53(content) { return content; }
    function peg$f54(name, settings, items) { return { type: "group", name, items, settings }; }
    function peg$f55(head, item) { return item; }
    function peg$f56(head, tail) { return [head, ...tail]; }
    function peg$f57(option) { return { type: "option", option }; }
    function peg$f58(name) { return { type: "table", ...name }; }
    function peg$f59(name, refs) { return refs; }
    function peg$f60(ref) { return ref; }
    function peg$f61(refs) { return refs; }
    function peg$f62(head, ref) { return ref; }
    function peg$f63(head, tail) { return [head, ...tail]; }
    function peg$f64(refs) { return refs || []; }
    function peg$f65(from, cardinality, to, settings) { return { type: "ref", cardinality, from, to, settings }; }
    function peg$f66(n) { return n; }
    function peg$f67(n) { return n; }
    function peg$f68(schemaTable, columns) { return { ...schemaTable, columns }; }
    function peg$f69(name) { return [name]; }
    function peg$f70(name, settings, body) { return { type: "dep", name, settings, ...body }; }
    function peg$f71(edge) { return { edges: [edge], options: {} }; }
    function peg$f72(items) {
        return {
            edges: items.filter(i => i.type === "edge").map(i => i.edge),
            options: items.filter(i => i.type === "option").reduce((a, b) => Object.assign(a, b.option), {}),
        };
    }
    function peg$f73(head, item) { return item; }
    function peg$f74(head, tail) { return [head, ...tail]; }
    function peg$f75(items) { return items || []; }
    function peg$f76(edge) { return { type: "edge", edge }; }
    function peg$f77(option) { return { type: "option", option }; }
    function peg$f78(left, direction, right, settings) {
        const [from, to] = direction === "->" ? [left, right] : [right, left];
        return { from, to, settings };
    }
    function peg$f79(head, name) { return name; }
    function peg$f80(head, tail) {
        const parts = [head, ...tail];
        const [schema, name, column] = parts.length >= 3 ? [parts[0], parts[1], parts[2]]
            : parts.length === 2 ? [null, parts[0], parts[1]]
                : [null, parts[0], null];
        return { schema, name, column, parts };
    }
    function peg$f81(key, value) { return { [key]: value }; }
    function peg$f82(value) { return value.trim(); }
    function peg$f83(head, name) { return name; }
    function peg$f84(head, tail) { return [head, ...tail]; }
    function peg$f85(columns) { return columns; }
    function peg$f86(name, items) { return { type: "enum", ...name, items }; }
    function peg$f87(head, item) { return item; }
    function peg$f88(head, tail) { return [head, ...tail].filter(i => i); }
    function peg$f89(name, settings) { return { type: "value", name, settings }; }
    function peg$f90(schema, name) { return { schema, name }; }
    function peg$f91(name) { return { schema: null, name }; }
    function peg$f92(content) { return content; }
    function peg$f93() { return ""; }
    function peg$f94(content) { return content; }
    function peg$f95(head, c) { return c; }
    function peg$f96(head, tail) { return [head, ...tail].join(""); }
    function peg$f97() { return "'"; }
    function peg$f98(content) { return content.join(""); }
    function peg$f99() { return '"'; }
    function peg$f100(content) { return content.join(""); }
    function peg$f101(comment) { return { type: "comment", comment }; }
    function peg$f102(comment) { return comment; }
    function peg$f103() { return ""; }
    function peg$f104(comment) { return comment; }
    function peg$f105(head, c) { return c; }
    function peg$f106(head, tail) { return [head, ...tail].join(""); }
    function peg$f107(pairs) { return pairs; }
    function peg$f108(head, setting) { return setting; }
    function peg$f109(head, tail) { return [head, ...tail].reduce((a, b) => Object.assign(a, b), {}); }
    function peg$f110(key, v) { return v; }
    function peg$f111(key, value) { return { [key]: value }; }
    function peg$f112() { return text().trim().toLowerCase(); }
    function peg$f113() { return text().trim(); }
    function peg$f114() { return text(); }
    function peg$f115(head, opt) { return opt; }
    function peg$f116(head, tail) { return [head, ...tail].reduce((a, b) => Object.assign(a, b), {}); }
    function peg$f117(key, value) { return { [key]: value }; }
    function peg$f118(key, value) { return { [key]: value }; }
    function peg$f119() { return text().trim().toLowerCase(); }
    let peg$currPos = options.peg$currPos | 0;
    let peg$savedPos = peg$currPos;
    const peg$posDetailsCache = [{ line: 1, column: 1 }];
    let peg$maxFailPos = peg$currPos;
    let peg$maxFailExpected = options.peg$maxFailExpected || [];
    let peg$silentFails = options.peg$silentFails | 0;
    let peg$result;
    if (options.startRule) {
        if (!(options.startRule in peg$startRuleFunctions)) {
            throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
        }
        peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }
    function text() {
        return input.substring(peg$savedPos, peg$currPos);
    }
    function offset() {
        return peg$savedPos;
    }
    function range() {
        return {
            source: peg$source,
            start: peg$savedPos,
            end: peg$currPos,
        };
    }
    function location() {
        return peg$computeLocation(peg$savedPos, peg$currPos);
    }
    function expected(description, location) {
        location = location !== undefined
            ? location
            : peg$computeLocation(peg$savedPos, peg$currPos);
        throw peg$buildStructuredError([peg$otherExpectation(description)], input.substring(peg$savedPos, peg$currPos), location);
    }
    function error(message, location) {
        location = location !== undefined
            ? location
            : peg$computeLocation(peg$savedPos, peg$currPos);
        throw peg$buildSimpleError(message, location);
    }
    function peg$getUnicode(pos = peg$currPos) {
        const cp = input.codePointAt(pos);
        if (cp === undefined) {
            return "";
        }
        return String.fromCodePoint(cp);
    }
    function peg$literalExpectation(text, ignoreCase) {
        return { type: "literal", text, ignoreCase };
    }
    function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
        return { type: "class", parts, inverted, ignoreCase, unicode };
    }
    function peg$anyExpectation() {
        return { type: "any" };
    }
    function peg$endExpectation() {
        return { type: "end" };
    }
    function peg$otherExpectation(description) {
        return { type: "other", description };
    }
    function peg$computePosDetails(pos) {
        let details = peg$posDetailsCache[pos];
        let p;
        if (details) {
            return details;
        }
        else {
            if (pos >= peg$posDetailsCache.length) {
                p = peg$posDetailsCache.length - 1;
            }
            else {
                p = pos;
                while (!peg$posDetailsCache[--p]) { }
            }
            details = peg$posDetailsCache[p];
            details = {
                line: details.line,
                column: details.column,
            };
            while (p < pos) {
                if (input.charCodeAt(p) === 10) {
                    details.line++;
                    details.column = 1;
                }
                else {
                    details.column++;
                }
                p++;
            }
            peg$posDetailsCache[pos] = details;
            return details;
        }
    }
    function peg$computeLocation(startPos, endPos, offset) {
        const startPosDetails = peg$computePosDetails(startPos);
        const endPosDetails = peg$computePosDetails(endPos);
        const res = {
            source: peg$source,
            start: {
                offset: startPos,
                line: startPosDetails.line,
                column: startPosDetails.column,
            },
            end: {
                offset: endPos,
                line: endPosDetails.line,
                column: endPosDetails.column,
            },
        };
        if (offset && peg$source && (typeof peg$source.offset === "function")) {
            res.start = peg$source.offset(res.start);
            res.end = peg$source.offset(res.end);
        }
        return res;
    }
    function peg$fail(expected) {
        if (peg$currPos < peg$maxFailPos) {
            return;
        }
        if (peg$currPos > peg$maxFailPos) {
            peg$maxFailPos = peg$currPos;
            peg$maxFailExpected = [];
        }
        peg$maxFailExpected.push(expected);
    }
    function peg$buildSimpleError(message, location) {
        return new peg$SyntaxError(message, null, null, location);
    }
    function peg$buildStructuredError(expected, found, location) {
        return new peg$SyntaxError(peg$SyntaxError.buildMessage(expected, found), expected, found, location);
    }
    function peg$parseFile() {
        let s0, s1, s2;
        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parseDBML();
        if (s2 !== peg$FAILED) {
            while (s2 !== peg$FAILED) {
                s1.push(s2);
                s2 = peg$parseDBML();
            }
        }
        else {
            s1 = peg$FAILED;
        }
        if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f0(s1);
        }
        s0 = s1;
        return s0;
    }
    function peg$parseDBML() {
        let s0, s1, s2, s3;
        s0 = peg$currPos;
        s1 = peg$parse_();
        s2 = peg$parseComment();
        if (s2 === peg$FAILED) {
            s2 = peg$parseProject();
            if (s2 === peg$FAILED) {
                s2 = peg$parseStickyNote();
                if (s2 === peg$FAILED) {
                    s2 = peg$parseTableGroup();
                    if (s2 === peg$FAILED) {
                        s2 = peg$parseTable();
                        if (s2 === peg$FAILED) {
                            s2 = peg$parseRecords();
                            if (s2 === peg$FAILED) {
                                s2 = peg$parseRef();
                                if (s2 === peg$FAILED) {
                                    s2 = peg$parseDep();
                                    if (s2 === peg$FAILED) {
                                        s2 = peg$parseEnum();
                                        if (s2 === peg$FAILED) {
                                            s2 = peg$currPos;
                                            s3 = peg$parseNewLine();
                                            if (s3 !== peg$FAILED) {
                                                peg$savedPos = s2;
                                                s3 = peg$f1();
                                            }
                                            s2 = s3;
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
        if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f2(s2);
        }
        else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }
        return s0;
    }
    function peg$parseProject() {
        let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
        s0 = peg$currPos;
        s1 = input.substr(peg$currPos, 7);
        if (s1.toLowerCase() === peg$c0) {
            peg$currPos += (7);
        }
        else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$e0);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            s3 = peg$parseName();
            if (s3 === peg$FAILED) {
                s3 = null;
            }
            s4 = peg$parse__();
            if (input.charCodeAt(peg$currPos) === 123) {
                s5 = peg$c1;
                peg$currPos++;
            }
            else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$e1);
                }
            }
            if (s5 !== peg$FAILED) {
                s6 = peg$parse__();
                s7 = peg$parseOptions();
                s8 = peg$parse__();
                if (input.charCodeAt(peg$currPos) === 125) {
                    s9 = peg$c2;
                    peg$currPos++;
                }
                else {
                    s9 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$e2);
                    }
                }
                if (s9 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$f3(s3, s7);
